# smooth_criminal

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  csv.rs  game.rs  image.rs  main.rs  strategies.rs
src/strategies/: classic.rs  continuous.rs  tsvrn9.rs  utils.rs
src/widget/: app.rs  grid.rs  inspectors.rs  labels.rs  viewer.rs
