[package]
name = "smooth_criminal"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
csv = "1.3.0"
dyn-clone = "1.0.17"
imageproc = "0.25.0"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1", features = ["full"] }

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
